# Hybrid-Move-Structure

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  build.zig
data/: example.txt.heads
include/: TODO.md  hybrid_move_structure.hpp
src/: hybrid_move_structure.cpp
